crates/pink/tests/snapshots/test_pink_contract__mq_egress-2.snap
---
source: crates/pink/tests/test_pink_contract.rs
expression: messages

---
PinkEgressMessages {
    messages: [],
    osp_messages: [
        OspMessage {
            payload: [
                66,
                66,
            ],
            topic: [
                36,
                36,
            ],
            remote_pubkey: Some(
                [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
            ),
        },
    ],
}
