crates/pink/tests/snapshots/test_pink_contract__mq_egress.snap
---
source: crates/pink/tests/test_pink_contract.rs
expression: effects

---
ExecSideEffects {
    messages: [],
    instantiated: [
        (
            0101010101010101010101010101010101010101010101010101010101010101 (5C62Ck4U...),
            d7b800810f95b0fa550332988b032812f6708a632b30735abcb9467e8d262f70 (5GwYp55a...),
        ),
    ],
}
