crates/pink/tests/snapshots/test_pink_contract__on_block_end-2.snap
---
source: crates/pink/tests/test_pink_contract.rs
expression: effects

---
ExecSideEffects {
    pink_events: [
        (
            b81c488581e2d18bdb886027d0b848b76f2376723c9b2fadf5ccc5b23a2ea038 (5GE751Bk...),
            OnBlockEndSelector(
                2188995711,
            ),
        ),
    ],
    instantiated: [
        (
            0101010101010101010101010101010101010101010101010101010101010101 (5C62Ck4U...),
            b81c488581e2d18bdb886027d0b848b76f2376723c9b2fadf5ccc5b23a2ea038 (5GE751Bk...),
        ),
    ],
}
