crates/pink/tests/snapshots/test_pink_contract__on_block_end-3.snap
---
source: crates/pink/tests/test_pink_contract.rs
assertion_line: 252
expression: effects
---
ExecSideEffects {
    pink_events: [
        (
            2affb93501ca8833b6dd866cbe03fe08da1a71dbccf82db453457901173485b8 (5D35qL1j...),
            Message(
                Message {
                    payload: [
                        102,
                        111,
                        111,
                    ],
                    topic: [
                        47,
                        98,
                        97,
                        114,
                    ],
                },
            ),
        ),
    ],
    ink_events: [],
    instantiated: [],
}
